fix errors in session 2 content

--- a/workshop2B.html
+++ b/workshop2B.html
@@ -333,50 +333,50 @@ Number of influenza related GP visits (weekly)
 </div>
 <div id="news-coverage-of-the-baltyre-influenza-outbreak" class="section level2">
 <h2>News Coverage of the Baltyre influenza outbreak</h2>
-<p><font size="+3"><b>Baltyre Daily Press</b></font><br>
-<font size="+2"><b>Baltyre says farewell to pandemic’s youngest victim</b></font><br>
-by Lewis Gallagher
-03/03/2023</p>
-<p>The influenza pandemic ravaging Baltyre has claimed yet another victim. There have been 55 deaths in the pandemic so far, but perhaps the most tragic loss is Elijah Hughes - at only 2, the youngest victim that the pandemic has claimed.</p>
-<p>Elijah Hughes liked books and movies. Friends and family say that he was always a treasure.</p>
-<p>Elijah is survived by his parents and grandparents, and by his siblings Theodore and Mason.</p>
-<p>The funeral service will be held Saturday at St. Andrew’s.</p>
-<hr />
 <p><font size="+3"><b>Baltyre News</b></font><br>
-<font size="+2"><b>Baltyre says farewell to local legend</b></font><br>
-by A.B. Miller
-05/03/2023</p>
-<p>The influenza pandemic ravaging Baltyre has claimed yet another victim. Caleb Gibson, local author and star, sadly passed away on Monday.</p>
-<p>Caleb was perhaps best known for his 2004 work Hopeless , but fans say that the rest of his work was equally as excellent.</p>
-<p>Caleb is survived by his husband, and by his siblings Daisy and Phoebe.</p>
-<p>The funeral service will be held Tuesday at St. Mary’s.</p>
+<font size="+2"><b>Baltyre says farewell to pandemic’s youngest victim</b></font><br>
+by Susan Moore
+11/03/2023</p>
+<p>The influenza pandemic ravaging Baltyre has claimed yet another victim. There have been 55 deaths in the pandemic so far, but perhaps the most tragic loss is Noah Roberts - at only 5, the youngest victim that the pandemic has claimed.</p>
+<p>Noah Roberts liked books and movies. Friends and family say that he was always a delight.</p>
+<p>Noah is survived by his parents and grandparents, and by his siblings Louise and Edward.</p>
+<p>The funeral service will be held Friday at Trinity Church.</p>
 <hr />
 <p><font size="+3"><b>Baltyre Star</b></font><br>
+<font size="+2"><b>Baltyre says farewell to local legend</b></font><br>
+by Austin Collins
+07/03/2023</p>
+<p>The influenza pandemic ravaging Baltyre has claimed yet another victim. Bonnie Morrison, local musician and star, sadly passed away on Monday.</p>
+<p>Bonnie was perhaps best known for her 2004 work My Best Friend , but fans say that the rest of her work was equally as excellent.</p>
+<p>Bonnie is survived by her partner, and by her siblings Gloria and Stephen.</p>
+<p>The funeral service will be held Tuesday at St. Andrew’s.</p>
+<hr />
+<p><font size="+3"><b>Baltyre Looking-Glass</b></font><br>
 <font size="+2"><b>Baltyre pandemic council making great strides</b></font><br>
-by Susan Grant
-09/03/2023</p>
-<p>Citizens of Baltyre should be grateful that the city’s Pandemic Response Council, hurriedly convened when a new pandemic began to hit Baltyre, has been so effective. While the initial death toll from the pandemic appeared to be quite serious, the actions taken by the PRC seem to have been most effective.</p>
-<p>Officials from the Center for Disease Control have publicly praised the Baltyre PRC, saying that the PRC has done all of the right things</p>
+by Walter Chevalier
+06/03/2023</p>
+<p>Citizens of Baltyre should be glad that the city’s Pandemic Response Council, quickly convened when a new pandemic began to hit Baltyre, has been so effective. While the initial death toll from the pandemic appeared to be quite high, the actions taken by the PRC seem to have been most effective.</p>
+<p>Officials from Public Health Scotland have publicly praised the Baltyre PRC, saying that their actions have been extremely effective</p>
 <p>There have been 13 deaths due to influenza in Baltyre this week. This is an enormous decrease, and hopefully Baltyre will see the death toll continue to decrease in the coming weeks.</p>
 <hr />
-<p><font size="+3"><b>Baltyre Evening News</b></font><br>
+<p><font size="+3"><b>Baltyre Times</b></font><br>
 <font size="+2"><b>Yet more overreach in the name of “science”</b></font><br>
-by Mick Spencer
-05/03/2023</p>
+by Lettitia Phillips
+14/03/2023</p>
 <p>Governments across the globe have seen how successful power-grabs in the name of public health can be, following on the wave of restrictions imposed because of so-called viral diseases like COVID-19 and “mpox”. So-called scientists are fearmongering - aerosols, monkeys, “bird” flu - now they think that they can fool us into thinking that the very air we breathe is unsafe. Citizens of Baltyre should stand strong against this terrible tyranny! No more mask mandates, no more senseless restrictions!</p>
 <p>Our elders should not be left to die alone, left frightened and hopeless in a mandatory lockdown claimed to be “for their benefit.” Our children should not be left to struggle through “pandemic” after “pandemic” - their language and literacy skills have been left behind due to these lockdowns, and their mental health is suffering. It is time that we take back control of our lives and end this tyranny of fear-mongering and so-called science. Citizens of Baltyre, stand with me and resist this most recent attack on your freedoms and your lives.</p>
 <hr />
 <p><font size="+3"><b>BBC Scotland </b></font><br>
 <font size="+2"><b>influenza pandemic in Baltyre</b></font><br>
-by Pablo Lane
-10/03/2023</p>
+by Abigail Smith
+06/03/2023</p>
 <p>Hard on the heels of the COVID-19 pandemic and a number of other health scares (monkeypox, or “mpox”, Strep A, and worries about other infectious disease outbreaks), another pandemic has hit the Scottish town of Baltyre. This time, it’s influenza - the same virus that has caused global pandemics in the past.</p>
 <p>There have been 55 deaths in the pandemic so far, but perhaps the most frightening aspect to this new pandemic is rumours that this variant of avian influenza has crossed the species barrier and can be transmitted from human to human.</p>
 <p>Scientists have been talking about this possibility for years, warning of the potential for a massive pandemic similar to the 1918 “Spanish Flu”.</p>
 <p>Is the virus circulating in Baltyre the one, or is the next influenza pandemic still around the corner?</p>
 </div>
-<div id="data-gathered" class="section level2">
-<h2>Data gathered</h2>
+<div id="rt-pcr-testing-for-influenza-virus" class="section level2">
+<h2>RT-PCR testing for influenza virus</h2>
 Table 2. RT-PCR testing of animals in the Baltyre influenza outbreak.
 <table>
 <table border="1">
@@ -396,10 +396,10 @@ Number of positive RT-PCR tests
 Sue’s Duck Farm
 </td>
 <td>
-97
+91
 </td>
 <td>
-8
+2
 </td>
 </tr>
 <tr>
@@ -407,73 +407,7 @@ Sue’s Duck Farm
 Craig’s Chickens
 </td>
 <td>
-79
-</td>
-<td>
-3
-</td>
-</tr>
-<tr>
-<td>
-Ellenmere Farm
-</td>
-<td>
-62
-</td>
-<td>
-0
-</td>
-</tr>
-<tr>
-<td>
-Highgrove
-</td>
-<td>
-40
-</td>
-<td>
-1
-</td>
-</tr>
-<tr>
-<td>
-Clucks-alot Farms
-</td>
-<td>
-37
-</td>
-<td>
-10
-</td>
-</tr>
-<tr>
-<td>
-Lucky Clucky Farms
-</td>
-<td>
-91
-</td>
-<td>
-8
-</td>
-</tr>
-<tr>
-<td>
-The Golden Goose
-</td>
-<td>
-91
-</td>
-<td>
-8
-</td>
-</tr>
-<tr>
-<td>
-Hightree Nature Reserve
-</td>
-<td>
-89
+48
 </td>
 <td>
 6
@@ -481,10 +415,76 @@ Hightree Nature Reserve
 </tr>
 <tr>
 <td>
+Ellenmere Farm
+</td>
+<td>
+44
+</td>
+<td>
+7
+</td>
+</tr>
+<tr>
+<td>
+Highgrove
+</td>
+<td>
+86
+</td>
+<td>
+5
+</td>
+</tr>
+<tr>
+<td>
+Clucks-alot Farms
+</td>
+<td>
+53
+</td>
+<td>
+6
+</td>
+</tr>
+<tr>
+<td>
+Lucky Clucky Farms
+</td>
+<td>
+79
+</td>
+<td>
+1
+</td>
+</tr>
+<tr>
+<td>
+The Golden Goose
+</td>
+<td>
+33
+</td>
+<td>
+0
+</td>
+</tr>
+<tr>
+<td>
+Hightree Nature Reserve
+</td>
+<td>
+73
+</td>
+<td>
+8
+</td>
+</tr>
+<tr>
+<td>
 Lakesmere
 </td>
 <td>
-51
+59
 </td>
 <td>
 8
@@ -495,10 +495,10 @@ Lakesmere
 Heather and Gorse Farms
 </td>
 <td>
-80
+47
 </td>
 <td>
-7
+6
 </td>
 </tr>
 <tr>
@@ -506,15 +506,48 @@ Heather and Gorse Farms
 Grace’s Ganders
 </td>
 <td>
-89
+58
 </td>
 <td>
-10
+0
 </td>
 </tr>
 <tr>
 <td>
 Loosey Goosey Farms
+</td>
+<td>
+92
+</td>
+<td>
+5
+</td>
+</tr>
+<tr>
+<td>
+The Chicken Run
+</td>
+<td>
+66
+</td>
+<td>
+6
+</td>
+</tr>
+<tr>
+<td>
+Greenacres
+</td>
+<td>
+71
+</td>
+<td>
+6
+</td>
+</tr>
+<tr>
+<td>
+Hill Farm
 </td>
 <td>
 41
@@ -525,76 +558,10 @@ Loosey Goosey Farms
 </tr>
 <tr>
 <td>
-The Chicken Run
-</td>
-<td>
-55
-</td>
-<td>
-2
-</td>
-</tr>
-<tr>
-<td>
-Greenacres
-</td>
-<td>
-34
-</td>
-<td>
-7
-</td>
-</tr>
-<tr>
-<td>
-Hill Farm
-</td>
-<td>
-71
-</td>
-<td>
-3
-</td>
-</tr>
-<tr>
-<td>
 Loyola’s Turkey Farm
 </td>
 <td>
-68
-</td>
-<td>
-2
-</td>
-</tr>
-<tr>
-<td>
-The Balltyre Quail Farm
-</td>
-<td>
-80
-</td>
-<td>
-4
-</td>
-</tr>
-<tr>
-<td>
-Goosopolis Farms
-</td>
-<td>
-84
-</td>
-<td>
-3
-</td>
-</tr>
-<tr>
-<td>
-Cordelia and Ken’s Chickens
-</td>
-<td>
-77
+73
 </td>
 <td>
 1
@@ -602,13 +569,46 @@ Cordelia and Ken’s Chickens
 </tr>
 <tr>
 <td>
+The Balltyre Quail Farm
+</td>
+<td>
+71
+</td>
+<td>
+2
+</td>
+</tr>
+<tr>
+<td>
+Goosopolis Farms
+</td>
+<td>
+64
+</td>
+<td>
+7
+</td>
+</tr>
+<tr>
+<td>
+Cordelia and Ken’s Chickens
+</td>
+<td>
+73
+</td>
+<td>
+10
+</td>
+</tr>
+<tr>
+<td>
 Fair Hope Farm
 </td>
 <td>
-91
+67
 </td>
 <td>
-6
+2
 </td>
 </tr>
 </table>
